exports[`error() > Parse '' 1`] = `
{
  "node": "undefined",
  "errors": []
}
`;

exports[`error() > Parse 'whatever↓all errors' 1`] = `
{
  "node": {
    "type": "error",
    "range": {
      "start": 0,
      "end": 19
    }
  },
  "errors": [
    {
      "range": {
        "start": 0,
        "end": 19
      },
      "message": "Encountered unparseable content",
      "severity": 3
    }
  ]
}
`;

exports[`error() > Parse '⮀' 1`] = `
{
  "node": {
    "type": "error",
    "range": {
      "start": 0,
      "end": 1
    }
  },
  "errors": [
    {
      "range": {
        "start": 0,
        "end": 1
      },
      "message": "Encountered unparseable content",
      "severity": 3
    }
  ]
}
`;
